src/TeaseMe.MilovanaDownload/FlashTeaseScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.3.1.7705
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.3.1.7705 FlashTeaseScript.g 2012-05-18 09:14:21

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections;
using System.Text;


using System.Collections.Generic;
using Antlr.Runtime;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace TeaseMe.MilovanaDownload
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3.1.7705")]
[System.CLSCompliant(false)]
public partial class FlashTeaseScriptParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACTION", "BUTTON", "BUTTONS", "CAP", "DELAY", "FROM", "GO", "HIDDEN", "ID", "INTEGER", "LETTERS", "MAX", "MIN", "MULT", "NO", "NORMAL", "PAGE", "PIC", "PREFIX", "PROPERTIES", "QUOTED_STRING", "RANDOM", "RANGE", "SECRET", "SET", "SOUND", "STYLE", "TARGET", "TEXT", "TIME", "TO", "UNSET", "WS", "YES", "YN", "'#'", "')'", "','", "',cap'", "':'", "'action'", "'action:'", "'buttons('", "'delay('", "'e'", "'from:'", "'go('", "'hidden:'", "'horiz('", "'hrs'", "'instruc:'", "'media:'", "'mult('", "'no:'", "'page('", "'pic(id:'", "'prefix'", "'range('", "'sec'", "'set('", "'sound(id:'", "'style:\\'hidden\\''", "'style:\\'normal\\''", "'style:\\'secret\\''", "'style:hidden'", "'style:normal'", "'style:secret'", "'target'", "'target:'", "'text:'", "'time:'", "'time:random('", "'to:'", "'unset('", "'vert('", "'yes:'", "'yn('"
	};
	public const int EOF=-1;
	public const int ACTION=4;
	public const int BUTTON=5;
	public const int BUTTONS=6;
	public const int CAP=7;
	public const int DELAY=8;
	public const int FROM=9;
	public const int GO=10;
	public const int HIDDEN=11;
	public const int ID=12;
	public const int INTEGER=13;
	public const int LETTERS=14;
	public const int MAX=15;
	public const int MIN=16;
	public const int MULT=17;
	public const int NO=18;
	public const int NORMAL=19;
	public const int PAGE=20;
	public const int PIC=21;
	public const int PREFIX=22;
	public const int PROPERTIES=23;
	public const int QUOTED_STRING=24;
	public const int RANDOM=25;
	public const int RANGE=26;
	public const int SECRET=27;
	public const int SET=28;
	public const int SOUND=29;
	public const int STYLE=30;
	public const int TARGET=31;
	public const int TEXT=32;
	public const int TIME=33;
	public const int TO=34;
	public const int UNSET=35;
	public const int WS=36;
	public const int YES=37;
	public const int YN=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int T__70=70;
	public const int T__71=71;
	public const int T__72=72;
	public const int T__73=73;
	public const int T__74=74;
	public const int T__75=75;
	public const int T__76=76;
	public const int T__77=77;
	public const int T__78=78;
	public const int T__79=79;
	public const int T__80=80;

	// delegates
	// delegators

	public FlashTeaseScriptParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public FlashTeaseScriptParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);

		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();


		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return FlashTeaseScriptParser.tokenNames; } }
	public override string GrammarFileName { get { return "FlashTeaseScript.g"; } }


	ArrayList exceptions = new ArrayList();

	public override void ReportError(RecognitionException e)
	{
	    exceptions.Add(e);
	}

	public bool HasError
	{
		get { return exceptions.Count > 0; }
	}

	public string ErrorMessage
	{
		get { return this.GetErrorMessage(exceptions[0] as RecognitionException, this.TokenNames); }
	}

	public string ErrorPosition
	{
		get { return this.GetErrorHeader(exceptions[0] as RecognitionException); }
	}


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public sealed partial class tease_return : ParserRuleReturnScope<CommonToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public tease_return(FlashTeaseScriptParser grammar) {OnCreated(grammar);}
		partial void OnCreated(FlashTeaseScriptParser grammar);
	}

	partial void EnterRule_tease();
	partial void LeaveRule_tease();

	// $ANTLR start "tease"
	// FlashTeaseScript.g:77:8: public tease : ( page )* ;
	[GrammarRule("tease")]
	public FlashTeaseScriptParser.tease_return tease()
	{
		EnterRule_tease();
		EnterRule("tease", 1);
		TraceIn("tease", 1);
		FlashTeaseScriptParser.tease_return retval = new FlashTeaseScriptParser.tease_return(this);
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		FlashTeaseScriptParser.page_return page1 = default(FlashTeaseScriptParser.page_return);


		try { DebugEnterRule(GrammarFileName, "tease");
		DebugLocation(77, 1);
		try
		{
			// FlashTeaseScript.g:78:2: ( ( page )* )
			DebugEnterAlt(1);
			// FlashTeaseScript.g:78:4: ( page )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(78, 4);
			// FlashTeaseScript.g:78:4: ( page )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if (((LA1_0>=INTEGER && LA1_0<=LETTERS)))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// FlashTeaseScript.g:78:4: page
					{
					DebugLocation(78, 4);
					PushFollow(Follow._page_in_tease205);
					page1=page();
					PopFollow();

					adaptor.AddChild(root_0, page1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("tease", 1);
			LeaveRule("tease", 1);
			LeaveRule_tease();
		}
		DebugLocation(79, 1);
		} finally { DebugExitRule(GrammarFileName, "tease"); }
		return retval;

	}
	// $ANTLR end "tease"

	private sealed partial class page_return : ParserRuleReturnScope<CommonToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public page_return(FlashTeaseScriptParser grammar) {OnCreated(grammar);}
		partial void OnCreated(FlashTeaseScriptParser grammar);
	}

	partial void EnterRule_page();
	partial void LeaveRule_page();

	// $ANTLR start "page"
	// FlashTeaseScript.g:81:1: page : pageRef 'page(' ( pageProperties )? ')' -> ^( PAGE pageRef ( ^( PROPERTIES pageProperties ) )? ) ;
	[GrammarRule("page")]
	private FlashTeaseScriptParser.page_return page()
	{
		EnterRule_page();
		EnterRule("page", 2);
		TraceIn("page", 2);
		FlashTeaseScriptParser.page_return retval = new FlashTeaseScriptParser.page_return(this);
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken string_literal3 = default(CommonToken);
		CommonToken char_literal5 = default(CommonToken);
		FlashTeaseScriptParser.pageRef_return pageRef2 = default(FlashTeaseScriptParser.pageRef_return);
		FlashTeaseScriptParser.pageProperties_return pageProperties4 = default(FlashTeaseScriptParser.pageProperties_return);

		CommonTree string_literal3_tree = default(CommonTree);
		CommonTree char_literal5_tree = default(CommonTree);
		RewriteRuleITokenStream stream_58=new RewriteRuleITokenStream(adaptor,"token 58");
		RewriteRuleITokenStream stream_40=new RewriteRuleITokenStream(adaptor,"token 40");
		RewriteRuleSubtreeStream stream_pageRef=new RewriteRuleSubtreeStream(adaptor,"rule pageRef");
		RewriteRuleSubtreeStream stream_pageProperties=new RewriteRuleSubtreeStream(adaptor,"rule pageProperties");
		try { DebugEnterRule(GrammarFileName, "page");
		DebugLocation(81, 1);
		try
		{
			// FlashTeaseScript.g:82:2: ( pageRef 'page(' ( pageProperties )? ')' -> ^( PAGE pageRef ( ^( PROPERTIES pageProperties ) )? ) )
			DebugEnterAlt(1);
			// FlashTeaseScript.g:82:4: pageRef 'page(' ( pageProperties )? ')'
			{
			DebugLocation(82, 4);
			PushFollow(Follow._pageRef_in_page217);
			pageRef2=pageRef();
			PopFollow();

			stream_pageRef.Add(pageRef2.Tree);
			DebugLocation(82, 12);
			string_literal3=(CommonToken)Match(input,58,Follow._58_in_page219);  
			stream_58.Add(string_literal3);

			DebugLocation(82, 20);
			// FlashTeaseScript.g:82:20: ( pageProperties )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==45||LA2_0==48||LA2_0==51||(LA2_0>=54 && LA2_0<=55)||LA2_0==73))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// FlashTeaseScript.g:82:20: pageProperties
				{
				DebugLocation(82, 20);
				PushFollow(Follow._pageProperties_in_page221);
				pageProperties4=pageProperties();
				PopFollow();

				stream_pageProperties.Add(pageProperties4.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(82, 36);
			char_literal5=(CommonToken)Match(input,40,Follow._40_in_page224);  
			stream_40.Add(char_literal5);



			{
			// AST REWRITE
			// elements: pageRef, pageProperties
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 83:3: -> ^( PAGE pageRef ( ^( PROPERTIES pageProperties ) )? )
			{
				DebugLocation(83, 6);
				// FlashTeaseScript.g:83:6: ^( PAGE pageRef ( ^( PROPERTIES pageProperties ) )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(83, 8);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(PAGE, "PAGE"), root_1);

				DebugLocation(83, 13);
				adaptor.AddChild(root_1, stream_pageRef.NextTree());
				DebugLocation(83, 21);
				// FlashTeaseScript.g:83:21: ( ^( PROPERTIES pageProperties ) )?
				if (stream_pageProperties.HasNext)
				{
					DebugLocation(83, 21);
					// FlashTeaseScript.g:83:21: ^( PROPERTIES pageProperties )
					{
					CommonTree root_2 = (CommonTree)adaptor.Nil();
					DebugLocation(83, 23);
					root_2 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(PROPERTIES, "PROPERTIES"), root_2);

					DebugLocation(83, 34);
					adaptor.AddChild(root_2, stream_pageProperties.NextTree());

					adaptor.AddChild(root_1, root_2);
					}

				}
				stream_pageProperties.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("page", 2);
			LeaveRule("page", 2);
			LeaveRule_page();
		}
		DebugLocation(84, 1);
		} finally { DebugExitRule(GrammarFileName, "page"); }
		return retval;

	}
	// $ANTLR end "page"

	private sealed partial class pageProperties_return : ParserRuleReturnScope<CommonToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public pageProperties_return(FlashTeaseScriptParser grammar) {OnCreated(grammar);}
		partial void OnCreated(FlashTeaseScriptParser grammar);
	}

	partial void EnterRule_pageProperties();
	partial void LeaveRule_pageProperties();

	// $ANTLR start "pageProperties"
	// FlashTeaseScript.g:86:1: pageProperties : pageProp ( ',' pageProp )* -> ( pageProp )+ ;
	[GrammarRule("pageProperties")]
	private FlashTeaseScriptParser.pageProperties_return pageProperties()
	{
		EnterRule_pageProperties();
		EnterRule("pageProperties", 3);
		TraceIn("pageProperties", 3);
		FlashTeaseScriptParser.pageProperties_return retval = new FlashTeaseScriptParser.pageProperties_return(this);
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken char_literal7 = default(CommonToken);
		FlashTeaseScriptParser.pageProp_return pageProp6 = default(FlashTeaseScriptParser.pageProp_return);
		FlashTeaseScriptParser.pageProp_return pageProp8 = default(FlashTeaseScriptParser.pageProp_return);

		CommonTree char_literal7_tree = default(CommonTree);
		RewriteRuleITokenStream stream_41=new RewriteRuleITokenStream(adaptor,"token 41");
		RewriteRuleSubtreeStream stream_pageProp=new RewriteRuleSubtreeStream(adaptor,"rule pageProp");
		try { DebugEnterRule(GrammarFileName, "pageProperties");
		DebugLocation(86, 1);
		try
		{
			// FlashTeaseScript.g:87:2: ( pageProp ( ',' pageProp )* -> ( pageProp )+ )
			DebugEnterAlt(1);
			// FlashTeaseScript.g:87:4: pageProp ( ',' pageProp )*
			{
			DebugLocation(87, 4);
			PushFollow(Follow._pageProp_in_pageProperties253);
			pageProp6=pageProp();
			PopFollow();

			stream_pageProp.Add(pageProp6.Tree);
			DebugLocation(87, 13);
			// FlashTeaseScript.g:87:13: ( ',' pageProp )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==41))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// FlashTeaseScript.g:87:14: ',' pageProp
					{
					DebugLocation(87, 14);
					char_literal7=(CommonToken)Match(input,41,Follow._41_in_pageProperties256);  
					stream_41.Add(char_literal7);

					DebugLocation(87, 18);
					PushFollow(Follow._pageProp_in_pageProperties258);
					pageProp8=pageProp();
					PopFollow();

					stream_pageProp.Add(pageProp8.Tree);

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }



			{
			// AST REWRITE
			// elements: pageProp
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 88:3: -> ( pageProp )+
			{
				DebugLocation(88, 6);
				if (!(stream_pageProp.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_pageProp.HasNext )
				{
					DebugLocation(88, 6);
					adaptor.AddChild(root_0, stream_pageProp.NextTree());

				}
				stream_pageProp.Reset();

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("pageProperties", 3);
			LeaveRule("pageProperties", 3);
			LeaveRule_pageProperties();
		}
		DebugLocation(89, 1);
		} finally { DebugExitRule(GrammarFileName, "pageProperties"); }
		return retval;

	}
	// $ANTLR end "pageProperties"

	private sealed partial class pageProp_return : ParserRuleReturnScope<CommonToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public pageProp_return(FlashTeaseScriptParser grammar) {OnCreated(grammar);}
		partial void OnCreated(FlashTeaseScriptParser grammar);
	}

	partial void EnterRule_pageProp();
	partial void LeaveRule_pageProp();

	// $ANTLR start "pageProp"
	// FlashTeaseScript.g:91:1: pageProp : ( textDef -> ^( TEXT textDef ) | actionDef );
	[GrammarRule("pageProp")]
	private FlashTeaseScriptParser.pageProp_return pageProp()
	{
		EnterRule_pageProp();
		EnterRule("pageProp", 4);
		TraceIn("pageProp", 4);
		FlashTeaseScriptParser.pageProp_return retval = new FlashTeaseScriptParser.pageProp_return(this);
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		FlashTeaseScriptParser.textDef_return textDef9 = default(FlashTeaseScriptParser.textDef_return);
		FlashTeaseScriptParser.actionDef_return actionDef10 = default(FlashTeaseScriptParser.actionDef_return);

		RewriteRuleSubtreeStream stream_textDef=new RewriteRuleSubtreeStream(adaptor,"rule textDef");
		try { DebugEnterRule(GrammarFileName, "pageProp");
		DebugLocation(91, 1);
		try
		{
			// FlashTeaseScript.g:92:2: ( textDef -> ^( TEXT textDef ) | actionDef )
			int alt4=2;
			try { DebugEnterDecision(4, false);
			int LA4_0 = input.LA(1);

			if ((LA4_0==73))
			{
				alt4 = 1;
			}
			else if ((LA4_0==45||LA4_0==48||LA4_0==51||(LA4_0>=54 && LA4_0<=55)))
			{
				alt4 = 2;
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 4, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// FlashTeaseScript.g:92:4: textDef
				{
				DebugLocation(92, 4);
				PushFollow(Follow._textDef_in_pageProp279);
				textDef9=textDef();
				PopFollow();

				stream_textDef.Add(textDef9.Tree);


				{
				// AST REWRITE
				// elements: textDef
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (CommonTree)adaptor.Nil();
				// 93:3: -> ^( TEXT textDef )
				{
					DebugLocation(93, 6);
					// FlashTeaseScript.g:93:6: ^( TEXT textDef )
					{
					CommonTree root_1 = (CommonTree)adaptor.Nil();
					DebugLocation(93, 8);
					root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(TEXT, "TEXT"), root_1);

					DebugLocation(93, 13);
					adaptor.AddChild(root_1, stream_textDef.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// FlashTeaseScript.g:94:4: actionDef
				{
				root_0 = (CommonTree)adaptor.Nil();

				DebugLocation(94, 4);
				PushFollow(Follow._actionDef_in_pageProp295);
				actionDef10=actionDef();
				PopFollow();

				adaptor.AddChild(root_0, actionDef10.Tree);

				}
				break;

			}
			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("pageProp", 4);
			LeaveRule("pageProp", 4);
			LeaveRule_pageProp();
		}
		DebugLocation(95, 1);
		} finally { DebugExitRule(GrammarFileName, "pageProp"); }
		return retval;

	}
	// $ANTLR end "pageProp"

	private sealed partial class textDef_return : ParserRuleReturnScope<CommonToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public textDef_return(FlashTeaseScriptParser grammar) {OnCreated(grammar);}
		partial void OnCreated(FlashTeaseScriptParser grammar);
	}

	partial void EnterRule_textDef();
	partial void LeaveRule_textDef();

	// $ANTLR start "textDef"
	// FlashTeaseScript.g:97:1: textDef : 'text:' QUOTED_STRING ;
	[GrammarRule("textDef")]
	private FlashTeaseScriptParser.textDef_return textDef()
	{
		EnterRule_textDef();
		EnterRule("textDef", 5);
		TraceIn("textDef", 5);
		FlashTeaseScriptParser.textDef_return retval = new FlashTeaseScriptParser.textDef_return(this);
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken string_literal11 = default(CommonToken);
		CommonToken QUOTED_STRING12 = default(CommonToken);

		CommonTree string_literal11_tree = default(CommonTree);
		CommonTree QUOTED_STRING12_tree = default(CommonTree);

		try { DebugEnterRule(GrammarFileName, "textDef");
		DebugLocation(97, 1);
		try
		{
			// FlashTeaseScript.g:98:2: ( 'text:' QUOTED_STRING )
			DebugEnterAlt(1);
			// FlashTeaseScript.g:98:4: 'text:' QUOTED_STRING
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(98, 11);
			string_literal11=(CommonToken)Match(input,73,Follow._73_in_textDef306); 
			DebugLocation(98, 13);
			QUOTED_STRING12=(CommonToken)Match(input,QUOTED_STRING,Follow._QUOTED_STRING_in_textDef309); 
			QUOTED_STRING12_tree = (CommonTree)adaptor.Create(QUOTED_STRING12);
			adaptor.AddChild(root_0, QUOTED_STRING12_tree);


			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("textDef", 5);
			LeaveRule("textDef", 5);
			LeaveRule_textDef();
		}
		DebugLocation(99, 1);
		} finally { DebugExitRule(GrammarFileName, "textDef"); }
		return retval;

	}
	// $ANTLR end "textDef"

	private sealed partial class actionDef_return : ParserRuleReturnScope<CommonToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public actionDef_return(FlashTeaseScriptParser grammar) {OnCreated(grammar);}
		partial void OnCreated(FlashTeaseScriptParser grammar);
	}

	partial void EnterRule_actionDef();
	partial void LeaveRule_actionDef();
